# igni-samples

./: CMakeLists.txt  INSTALL.md  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  igni-samples.pc.in  testrun
1-load-model/: Makefile.am  load-model.c  load-model.h
1-model-load/: Makefile.am  Makefile.in  model_load.c  model_load.h  testrun
2-hitbox/: Makefile.am  hitbox.c  hitbox.h  testrun
src/: 1-load-model  Makefile.am  cqp_cast.c  cqp_cast.h  hitbox.c  hitbox.h  load-model.c  load-model.h  load_model.c  main.c  main.h  mesh.mtl
src/cmd/: cmdline.c  cmdline.h  opt.ggo
